// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NetworkLogo > renders without error 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _overflowX-hidden _overflowY-hidden _zIndex-10"
      data-testid="network-logo"
      style="width: 20px; height: 20px; border-radius: 6px; border-width: 0px; border-color: #131313; border-style: solid;"
    >
      <div
        class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        style="width: 20px; height: 20px;"
      >
        <div
          class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
          style="background-image: url(mock-asset-BASE_LOGO.png);"
        />
        <img
          alt=""
          class="css-accessibilityImage-9pa8cd"
          draggable="false"
          src="mock-asset-BASE_LOGO.png"
        />
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`TransactionSummaryNetworkLogo > renders without error 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _overflowX-hidden _overflowY-hidden _zIndex-10"
      data-testid="network-logo"
      style="width: 23.2px; height: 23.2px; border-radius: 6.96px; border-width: 1.6px; border-color: #131313; border-style: solid;"
    >
      <div
        class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        style="width: 20px; height: 20px;"
      >
        <div
          class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
          style="background-image: url(mock-asset-BASE_LOGO.png);"
        />
        <img
          alt=""
          class="css-accessibilityImage-9pa8cd"
          draggable="false"
          src="mock-asset-BASE_LOGO.png"
        />
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;
